chore: add user login swagger docs
